[gd_scene format=3 uid="uid://caft14f0xqo6"]

[ext_resource type="Script" uid="uid://qi4qdfy4cte8" path="res://scenes/game_scene/levels/level.gd" id="1_w8c7f"]
[ext_resource type="PackedScene" uid="uid://sfltlay2e84w" path="res://scenes/game_scene/levels/Level.tscn" id="2_i1l6d"]
[ext_resource type="Texture2D" uid="uid://e551iq12vxfg" path="res://assets/keyboard_arrows_horizontal.png" id="3_c6hhn"]
[ext_resource type="Texture2D" uid="uid://bwe6u6tmro5vi" path="res://assets/keyboard_e.png" id="4_yh8gr"]
[ext_resource type="Script" uid="uid://bll85ag2um7hl" path="res://scenes/game_scene/tutorial_manager.gd" id="5_urmku"]

[node name="Level1" type="Control" unique_id=266725257]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8c7f")
next_level_path = "res://scenes/game_scene/levels/level_2.tscn"

[node name="BackgroundColor" type="ColorRect" parent="." unique_id=488494201]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1909364306]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Remaining Timer" type="Label" parent="MarginContainer" unique_id=1591263991]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1666223033]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Game Timer" type="Label" parent="MarginContainer/VBoxContainer" unique_id=153752389]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=366526319]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1029651382]
layout_mode = 2
size_flags_vertical = 3

[node name="Level" parent="MarginContainer/VBoxContainer/BoxContainer" unique_id=97832403 instance=ExtResource("2_i1l6d")]
level = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1896993322]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=420490874]
layout_mode = 2
alignment = 1

[node name="TutorialButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=263503015]
layout_mode = 2
size_flags_horizontal = 2
text = "Tutorial"

[node name="Navigation Icons" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=697983011]
layout_mode = 2
texture = ExtResource("3_c6hhn")
expand_mode = 2

[node name="Selector Label" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1100553591]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/Selector Label" unique_id=2095184877]
layout_mode = 2
texture = ExtResource("4_yh8gr")
expand_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Selector Label" unique_id=1373320853]
layout_mode = 2
text = "Select"

[node name="TutorialManager" type="Node" parent="." unique_id=448883273]
unique_name_in_owner = true
script = ExtResource("5_urmku")

[connection signal="game_time" from="MarginContainer/VBoxContainer/BoxContainer/Level" to="." method="_on_level_game_time"]
[connection signal="level_lost" from="MarginContainer/VBoxContainer/BoxContainer/Level" to="." method="_on_lose_button_pressed"]
[connection signal="level_won" from="MarginContainer/VBoxContainer/BoxContainer/Level" to="." method="_on_win_button_pressed"]
[connection signal="remaining_start_count" from="MarginContainer/VBoxContainer/BoxContainer/Level" to="." method="_on_level_remaining_start_count"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/TutorialButton" to="." method="_on_tutorial_button_pressed"]
